[package]
name = "ariadne"
version = "0.1.0"
edition = "2021"

[lib]
name = "ariadne"
path = "src/lib.rs"

[[bin]]
name = "ariadne"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time", "json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
async-trait = "0.1"
bincode = "1.3"
thiserror = "1.0"
typetag = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "workflow_bench"
harness = false
